fix: header bar visibility issues in download mode [DHIS2-19279] (#3500)
Detect if the header is in the global shell or the same iframe and hide it
accordingly in download mode. 
Distinguish between the header bar and the download header bar, as they can 
have different heights.

--- a/src/components/app/styles/App.module.css
+++ b/src/components/app/styles/App.module.css
@@ -38,8 +38,8 @@
 }
 
 .downloadContent {
-    margin-top: var(--header-height);
-    height: calc(100vh - var(--header-height));
+    margin-top: var(--downloadheader-height);
+    height: calc(100vh - var(--downloadheader-height));
 }
 
 .appMapAndTable {
